# swaw_project

./: .gitignore  Ardiuno code OLED.txt  CMakeLists.txt  Makefile  README.md  app.cpp  konsultacje.odp
.metadata/: .log4j2.xml  version.ini
.metadata/.plugins/org.eclipse.cdt.core/: swaw.1689693573732.pdom  swaw.1689693868697.pdom  swaw.language.settings.xml
.metadata/.plugins/org.eclipse.core.resources/.projects/swaw/: .location  .markers
.metadata/.plugins/org.eclipse.core.resources/.projects/swaw/.indexes/: properties.index
.metadata/.plugins/org.eclipse.core.resources/.root/: 2.tree
.metadata/.plugins/org.eclipse.core.resources/.root/.indexes/: properties.index
.metadata/.plugins/org.eclipse.core.resources/.safetable/: org.eclipse.core.resources
.metadata/.plugins/org.eclipse.e4.workbench/: workbench.xmi
.metadata/.plugins/org.eclipse.ui.workbench/: workingsets.xml
bsp/nucleo-f103rb/: CMakeLists.txt  Makefile  swaw.ioc  toolchain.cmake
bsp/nucleo-f103rb/include/: bsp.hpp
bsp/nucleo-f103rb/src/: bsp.cpp
bsp/nucleo-f103rb/swaw/: .cmake_generated  .mxproject  Makefile
bsp/nucleo-f103rb/swaw/Core/Src/: main.c
swaw/: .cproject  .mxproject  .project  swaw.ioc  swaw.launch
swaw/Core/Inc/: bsp.h  main.h  stm32f1xx_it.h
swaw/Core/Src/: adc.c  bsp.c  gpio.c  main.c  stm32f1xx_it.c  tim.c
swaw/Debug/: makefile  objects.list  swaw.elf  swaw.list  swaw.map
swaw/Debug/Core/Src/: bsp.cyclo  bsp.d  bsp.su  main.cyclo  main.d  main.su  ssd1306.d  ssd1306_tests.d  stm32f1xx_it.cyclo  stm32f1xx_it.su  subdir.mk
(+8 files in other folders)
